# web-research

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-workflow-runtime-implementation-plan.md  index.md  technical-due-diligence-improvements.md
docs/api/: extension_guide.md
docs/dev/: architecture.md
docs/product/: overview.md
docs/tasks/: README.md  brightdata-search-provider-plan.md  jsonc-event-capture-plan.md
docs/tasks/phase-1-skeleton/: P1-01-project-init.md  P1-02-core-types.md  P1-03-url-normalize.md  P1-04-source-registry.md  P1-05-file-cache.md
docs/tasks/phase-2-tools/: P2-01-search-provider-mock.md  P2-02-tavily-provider.md  P2-03-search-web-tool.md  P2-04-fetch-url-tool.md  P2-05-extract-content-tool.md  P2-06-rank-sources-tool.md
docs/tasks/phase-3-agents/: P3-01-install-agents-sdk.md  P3-02-output-models.md  P3-03-agent-factories.md  P3-04-mock-model.md
docs/tasks/phase-4-standard-workflow/: P4-01-standard-workflow.md  P4-02-result-aggregator.md
docs/tasks/phase-5-events/: P5-01-event-types.md  P5-02-stream-workflow.md
docs/tasks/phase-6-cli/: P6-01-typer-app-list.md  P6-02-run-command.md  P6-03-output-formats.md
docs/tasks/phase-7-tui/: P7-01-textual-shell.md  P7-02-home-and-query.md  P7-03-run-screen.md  P7-04-result-screen.md  P7-05-cancel-and-settings.md
docs/tasks/phase-8-variants/: P8-01-quick-workflow.md  P8-02-deep-workflow.md
docs/tasks/phase-9-polish/: P9-01-live-integration-test.md  P9-02-prompt-finalization.md
docs/tasks/workflow-packaging/: WF-01-shared-workflow-package.md  WF-02-shared-prompt-assets.md  WF-03-standard-workflow-package.md  WF-04-quick-workflow-package.md  WF-05-deep-workflow-package.md  WF-06-remove-global-prompt-directory.md  WF-07-tests-and-import-cleanup.md  WF-08-technical-due-diligence-skeleton.md  WF-09-technical-due-diligence-implementation.md  WF-10-final-layout-cleanup.md
docs/workflows/: company_news.md  deep.md  technical-due-diligence.md  technical_due_diligence.md
outputs/: diligence.json  diligence_2.json  diligence_3.json  diligence_4.json  diligence_5.json
tests/: test_env.py  test_package.py  test_types.py
tests/_helpers/: mock_model.py
tests/_helpers/scripts/: standard_happy_path.json
tests/agents/: test_factories.py  test_mock_model.py  test_models.py  test_prompt_boundaries.py  test_smoke.py
tests/cli/: test_event_log.py  test_formats.py  test_list_cmd.py  test_progress.py  test_run_cmd.py
tests/events/: test_event_types.py  test_jsonc_writer.py  test_stream_workflow.py
tests/fixtures/html/: article.html
tests/integration/: test_live_standard.py
tests/pipeline/: test_runner.py  test_runtime.py  test_state.py  test_step.py
tests/providers/: test_brightdata.py  test_extract.py  test_fetch.py  test_search.py  test_searxng.py
tests/sources/: test_registry.py  test_url_normalize.py
tests/tools/: test_discover_urls.py  test_extract_content.py  test_fetch_url.py  test_rank_sources.py  test_search_web.py
tests/tools/providers/: test_mock.py  test_tavily.py
tests/tui/: helpers.py  test_app.py  test_confirm_cancel.py  test_home_screen.py  test_query_screen.py  test_result_screen.py  test_run_screen.py  test_settings_screen.py
tests/workflows/: test_deep.py  test_discovery.py  test_quick.py  test_result.py  test_standard.py  test_state.py
tests/workflows/deep/: test_workflow.py
tests/workflows/quick/: test_workflow.py
tests/workflows/standard/: test_workflow.py
tests/workflows/technical_due_diligence/: test_models.py  test_prompt_boundaries.py  test_schema.py  test_skeleton.py  test_workflow.py
webresearch/: __init__.py  cli.py  context.py  env.py  types.py
webresearch/agents/: gap.py  models.py  output.py  planner.py  prompts.py  researchers.py  reviewer.py  settings.py  tools.py
webresearch/cli/: __init__.py  formats.py  list_cmd.py  progress.py  run_cmd.py
webresearch/events/: __init__.py  jsonc_writer.py  step.py  stream.py  translation.py  types.py
webresearch/pipeline/: __init__.py  hooks.py  runner.py  runtime.py  state.py  step.py
webresearch/prompts/: broad.md  gap.md  official.md  output.md  planner.md  recent.md  reviewer.md
webresearch/prompts/depth_extras/: quick.md
webresearch/providers/: __init__.py  discover.py  errors.py  extract.py  fetch.py  search.py  services.py
webresearch/sources/: __init__.py  registry.py  url_normalize.py
webresearch/tools/: discover_urls.py  extract_content.py  fetch_and_extract.py  fetch_url.py  rank_sources.py  search_web.py
webresearch/tools/heuristics/: domain_reliability.py
webresearch/tools/providers/: errors.py  mock.py  search_provider.py  tavily.py
webresearch/tools/providers/fixtures/: default.py
webresearch/tui/: app.py  screen_base.py
webresearch/tui/screens/: home.py  query.py  result.py  run.py  settings.py
webresearch/tui/widgets/: artifacts.py  confirm_cancel.py  export_dialog.py  sources_table.py  timeline.py  warnings.py
webresearch/workflows/: __init__.py  deep.py  quick.py  registry.py  result.py  standard.py  state.py
webresearch/workflows/company_news/: __init__.py  agents.py  config.py  models.py  pipeline.py  tools.py  workflow.py
webresearch/workflows/company_news/prompts/: company_researcher.j2  intake_planner.j2  output_writer.j2  social_researcher.j2  web_news_researcher.j2
webresearch/workflows/deep/: README.md  __init__.py  agents.py  config.py  pipeline.py  tools.py  workflow.py
webresearch/workflows/deep/prompts/: depth_extras.md
webresearch/workflows/quick/: README.md  __init__.py  config.py  workflow.py
webresearch/workflows/shared/: __init__.py  prompt_loader.py  result.py
webresearch/workflows/shared/prompts/: gap.md  output.md  (+1 more)
webresearch/workflows/standard/: README.md  __init__.py  config.py  workflow.py
webresearch/workflows/technical_due_diligence/: README.md  WORKFLOW_DIAGRAM.md  __init__.py  agents.py  config.py  models.py  pipeline.py  schema.json  tools.py  workflow.py
(+18 files in other folders)
