[project]
name = "webresearch"
version = "0.1.0"
description = "Python SDK for LLM-powered web research workflows."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Web Research contributors" },
]
requires-python = ">=3.12"
keywords = ["web-research", "llm", "agents", "research", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "defusedxml>=0.7.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "openai-agents==0.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.8",
    "types-jsonschema>=4.26.0.20260408",
]

[project.urls]
Homepage = "https://github.com/kodepo-com/web-research"
Repository = "https://github.com/kodepo-com/web-research"
Issues = "https://github.com/kodepo-com/web-research/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webresearch"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff.lint]
select = [
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "E",
    "ERA",
    "F",
    "I",
    "PL",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "TCH",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "webresearch.*"
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = "webresearch.types"
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "webresearch.events.types"
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = [
    "webresearch.pipeline",
    "webresearch.pipeline.state",
    "webresearch.pipeline.step",
    "webresearch.pipeline.runtime",
    "webresearch.pipeline.runner",
    "webresearch.providers.search",
    "webresearch.providers.fetch",
    "webresearch.providers.extract",
    "webresearch.providers.discover",
    "webresearch.providers.services",
    "webresearch.workflows",
]
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_explicit = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: marks tests that use real network services",
]
testpaths = ["tests"]
addopts = "-q --strict-markers"
